форма для второй страницы с валидацией

--- a/reg/templates/stage1.html
+++ b/reg/templates/stage1.html
@@ -193,7 +193,7 @@
     <small class="gray">Например: Редко готовлю, но люблю ботать на кухне по ночам. Хочу завести собаку. Очень люблю читать, играть в хорроры и смотреть аниме. Открыт к общению и взаимопомощи :)</small>
 </div>
 <div class="hide">
-    <form id=" " action="" method="post">{{ csrf_token }}{{ form }}</form>
+    <form id="django-form" action="" method="post">{{ csrf_token }}{{ form }}</form>
 </div>
 {% endblock %}
 
