--- a/reg/templates/base.html
+++ b/reg/templates/base.html
@@ -430,7 +430,7 @@
         <button class="button primary" onclick="submitForm2()">Продолжить</button>
     </div>
   </div>
-  <div class="">
+  <div class="hide">
     <form id="django-form" action="" method="post">{{ csrf_token }}{{ form }}</form>
     </div>
   <footer>
